# ml

./: .gitignore  README.md  ml.cabal  stack.yaml
src/: ML.hs  ML_proto
src/ML/: GradientDescent.hs  Nat.hs  Regression.hs  Vec.hs
